--- a/serach.html
+++ b/serach.html
@@ -74,6 +74,11 @@
         <li onclick="playVideo('video3.mp4')">Soft Tapping Sounds</li>
     </ul>
 
+    <video id="player" controls>
+        <source id="video-source" src="" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <script>
         let player = document.getElementById("player");
 
