--- a/serach.html
+++ b/serach.html
@@ -79,6 +79,8 @@
         Your browser does not support the video tag.
     </video>
 
+    <li onclick="playVideo('截屏2024-06-07 下午11.32.16.png')">ASMR Rain Sounds</li>
+
     <script>
         let player = document.getElementById("player");
 
